# controlSBML

./: .gitignore  LICENSE  README.md  activate  activate.sh  check_dbg.sh  distrib.sh  distrib_test.sh  distribute.sh  do_analyze_biomodels.sh  docker_requirements.txt  issues.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_run.sh  test_notebooks.sh  todo.txt
controlSBML/: __init__.py  _version.py  constants.py  control_analysis.py  control_base.py  control_plot.py  control_sbml.py  iosystem_factory.py  logger.py  make_roadrunner.py  msgs.py  nonlinear_io_system.py  options.py  sequential_model.py  simulate_system.py  siso_builder.py  siso_closed_loop_system.py  timeseries.py  util.py
docker/: Dockerfile  docker_requirements.txt
docs/: Advanced Biological Control Systems - Figures.pptx  build_notes.md  controlSBML_saruo_lab.pptx  lab_presentation.pptx  mk_doc.sh
examples/: Analysis-of-Hepatitus-B.ipynb  Analysis-of-Hetatitus-B.ipynb  Analysis-of-Immune-Response-Pneumocci.ipynb  Analysis-of-Metformin.ipynb  Analysis-of-mTOR.ipynb  Controlling-Glucose-Metabolis-in-Yeast.ipynb  Regulating-Cell-Cycle-Xenpus-Laevis.ipynb  api_summary.ipynb  cancer-vitamins.ipynb  control_metformin.ipynb
models/: Smith2011_V1.ant  Tsai2014.ant  biomodels_823.ant
notebooks/: Analysis-of-Metformin-Control.ipynb  Analysis-of-Metrformin-Controller.ipynb  Analysis-of-mTOR.ipynb  BIOMD56.ant  Calculation-Dependent-Species.ipynb  Cascades.ipynb  Circuit-Analysis.ipynb  Control-Libray-Examples.ipynb  Control-Workflow.ipynb  Empirical-Transfer-Functions.ipynb  Exploration--Of-Several-Biomodels.ipynb  ExplorationOfSeveralBiomodels.ipynb  Exploring-Feedback-Control-SBML.ipynb  ExploringControl-Linear.ipynb  (+27 more)
(+160 files in other folders)
