[project]
name = "controlSBML"
version = "1.2.4"
description = "Control analysis of SBML models"
authors = [{ name = "Joseph Hellerstein", email = "joseph.hellerstein@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.6"

dependencies = [
    "coverage",
    "colour",
    "control",
    "docstring-expander",
    "jupyterlab",
    "lmfit",
    "matplotlib",
    "numpy",
    "pandas",
    "pip",
    "pylint",
    "python-libsbml",
    "seaborn",
    "symmathSBML",
    "sympy",
    "tellurium",
    "toml",
    "tqdm",
    "twine",
    "urllib3",
]

[project.urls]
Homepage = 'https://github.com/ModelEngineering/controlSBML'

[options.package_data]
data = "*.txt, *.csv, *.ant"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
